--- a/package.json
+++ b/package.json
@@ -1,25 +1,31 @@
 {
   "name": "with-storybook",
   "version": "1.0.0",
+  "private": true,
+  "engines" : { "node" : ">=12.8.0" },
   "main": "index.js",
   "scripts": {
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "dependencies": {
     "next": "latest",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "license": "MIT",
   "devDependencies": {
-    "@storybook/addon-actions": "6.0.5",
-    "@storybook/addon-links": "6.0.5",
-    "@storybook/addons": "6.0.5",
-    "@storybook/react": "6.0.5",
-    "babel-loader": "^8.0.5"
+    "@storybook/addon-actions": "6.0.21",
+    "@storybook/addon-essentials": "^6.0.21",
+    "@storybook/addon-links": "6.0.21",
+    "@storybook/addons": "6.0.21",
+    "@storybook/node-logger": "^6.0.21",
+    "@storybook/react": "6.0.21",
+    "babel-loader": "^8.1.0",
+    "react-is": "^16.13.1",
+    "typescript": "^4.0.2"
   }
 }
