--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "with-storybook",
   "version": "1.0.0",
   "private": true,
-  "engines" : { "node" : ">=12.8.0" },
+  "engines": {
+    "node": ">=12.8.0"
+  },
   "main": "index.js",
   "scripts": {
     "dev": "next",
@@ -25,6 +27,7 @@
     "@storybook/node-logger": "^6.0.21",
     "@storybook/react": "6.0.21",
     "babel-loader": "^8.1.0",
+    "babel-plugin-inline-react-svg": "^1.1.1",
     "react-is": "^16.13.1",
     "typescript": "^4.0.2"
   }
