--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@storybook/addons": "6.0.21",
     "@storybook/node-logger": "^6.0.21",
     "@storybook/react": "6.0.21",
+    "@types/react-transition-group": "^4.4.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-inline-react-svg": "^1.1.1",
     "react-is": "^16.13.1",
