--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "next",
+    "dev:debug": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
     "storybook": "start-storybook -p 6006 -s public",
@@ -15,9 +16,12 @@
   },
   "dependencies": {
     "next": "latest",
+    "next-optimized-images": "^3.0.0-canary.10",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-transition-group": "^4.4.1"
+    "react-optimized-image": "^0.4.1",
+    "react-transition-group": "^4.4.1",
+    "sharp": "^0.26.0"
   },
   "license": "MIT",
   "devDependencies": {
@@ -28,8 +32,10 @@
     "@storybook/node-logger": "^6.0.21",
     "@storybook/react": "6.0.21",
     "@types/react-transition-group": "^4.4.0",
+    "@types/sharp": "^0.26.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-inline-react-svg": "^1.1.1",
+    "next-compose-plugins": "^2.2.0",
     "react-is": "^16.13.1",
     "typescript": "^4.0.2"
   }
